--- a/index.html
+++ b/index.html
@@ -1486,7 +1486,7 @@ textarea.form-control {
           </div>
           
           <!-- Imagen 2 - Inicio Carrusel -->
-          <div class="clickable-image-container" data-url="https://homecarrusel.netlify.app/">
+          <div class="clickable-image-container" data-url="https://codecarruselventa.netlify.app/">
             <div class="clickable-image-title">Inicio Carrusel</div>
             <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiE6xnKCJOAGIm9U19oOX5DolXFN5l0IT2z_6b-W0EsHqq3bRma73Zol3J_ZRf7n4FjGhfkT_XkE5Elk2sOej1EL8ue9kGBAAreSAbI7aEwS86-1OKrqp8VdVhIBlWYSeHU87Q-2_hYj3Xg2pIx6ulhrM5UxfcwkPSiA2pDkTg8VGTkEKY/s1600/Nueva%20C290.webp" alt="Inicio Carrusel">
             <div class="clickable-image-overlay">
@@ -1505,7 +1505,7 @@ textarea.form-control {
           </p>
         </div>
         <div class="section-feature-image">
-          <div class="clickable-image-container" data-url="https://seccionpeliculas.netlify.app">
+          <div class="clickable-image-container" data-url="https://codemovieventa.netlify.app/">
             <div class="clickable-image-title">Sección de Películas</div>
             <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhfJI8XO6YL79q8c16ghwaNRZEVKy6s7vvoqzdWL7awtWA337NzdNqAr7hpC6jPSzO64dUrnGsVAuDnLeCTGwxVvkaqINkQSe3VoGdSSJ0tTstn6rsy9kzi0NDZkI3Mh6OO5ZF3NxmaT7xqhkRCKT9aaX6GVK21YXLYTPT7sJnLJnbA-9c/s1600/2.webp" alt="Sección de Películas">
             <div class="clickable-image-overlay">
@@ -1524,7 +1524,7 @@ textarea.form-control {
           </p>
         </div>
         <div class="section-feature-image">
-          <div class="clickable-image-container" data-url="https://seccionseries.netlify.app/">
+          <div class="clickable-image-container" data-url="https://codeserieventa.netlify.app/">
             <div class="clickable-image-title">Sección de Series</div>
             <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh9Pw4QCqeZlvULYLocbXpIy5Zj03xLgEKMrk2b_q5lSmNGfY7CmQ_dhyXTuDZQvurzqeXbeIK0vYHHxiK65lad4CjmLgEMvEOcrViF5F-oXO6YK2uu9a-pB5ZUuB2GUCchu0wZsMSn88TRM4t83Pz9obzgsmRt-0RVuK63VBUL6GYMMMM/s1600/4.webp" alt="Sección de Series">
             <div class="clickable-image-overlay">
@@ -1543,7 +1543,7 @@ textarea.form-control {
           </p>
         </div>
         <div class="section-feature-image">
-          <div class="clickable-image-container" data-url="https://secciontv.netlify.app/">
+          <div class="clickable-image-container" data-url="https://codetventa.netlify.app/">
             <div class="clickable-image-title">Sección de TV en Vivo</div>
             <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhNzrMvQUP3_v9fza2jPDui0PTa1-fIficpByfUUuFyfZ7N15SJuqCZIvHfdlzvABlVSJAQpxgjKTIppnocP-hTg9rQ4irNTWVn4963Hosk3Jjh6E_sLbeinYX2GvIHD9hYf-a-B-xLF6_g_EzjJMopm1IF-hMj2t4awgmxB7Um0qKx3Ds/s1600/6.webp" alt="Sección de TV en Vivo">
             <div class="clickable-image-overlay">
